--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,10 +16,20 @@
         <param-value>27017</param-value>
     </context-param>
 
+    <!-- CONTEXT CONFIG -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring-config/spring-context.xml</param-value>
+        <param-value>
+            /WEB-INF/spring-config/spring-context.xml
+        </param-value>
     </context-param>
+
+    <!--
+    <filter-mapping>
+        <filter-name>filterChainProxy</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    -->
 
     <jsp-config>
         <jsp-property-group>
@@ -27,6 +37,7 @@
         </jsp-property-group>
     </jsp-config>
 
+    <!-- APP CONTEXT LISTENER -->
     <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
@@ -46,5 +57,17 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <!-- FILTER -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>
+            org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
